[workspace]

[package]
name = "s2n-tls-tokio-renegotiate-test"
description = "Tests of the s2n-tls-tokio bindings using renegotiation"
version = "0.0.1"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/aws/s2n-tls"
license = "Apache-2.0"

[features]
default = []

[dependencies]

[dev-dependencies]
s2n-tls-tokio = {  path = "../.." }
s2n-tls = { path = "../../../s2n-tls", features = ["unstable-renegotiate"] }
tokio = { version = "1", features = [ "io-util", "macros", "net", "rt-multi-thread", "test-util"] }
tokio-macros = "=2.3.0"
foreign-types = "0.3"
openssl = "0.10"
openssl-sys = "0.9"
tokio-openssl = "0.6.4"
libc = { version = "0.2" }
